--- a/templates/index.html
+++ b/templates/index.html
@@ -24,10 +24,16 @@
 				<div class="grid_12">
 					<h1>
 						<a href="index.html">
-							<img src="{%static 'images/logo.png' %}" alt="Your Happy Family">
+							<img src="{% static 'images/logo.png' %}" alt="Your Happy Family">
 						</a>
 					</h1>
 				</div>
+				<!-- <div style="display: flex;">
+					<div style="flex-grow: 1;"></div>
+					<div>
+						<a href="#" class="btn" data-type="submit">LOGIN</a>
+					</div>
+				</div> -->
 			</div>
 		</header>
 		<div class="slider_wrapper">
@@ -133,7 +139,7 @@
 							<input name="Comfort" type="radio" id="tmRadio0" data-constraints='@RadioGroupChecked(name="Comfort", groups=[RadioGroup])' checked/>
 							<span>Cheap</span>
 							<input name="Comfort" type="radio" id="tmRadio1" data-constraints='@RadioGroupChecked(name="Comfort", groups=[RadioGroup])' />
-							<span>Standart</span>
+							<span>Standard</span>
 							<input name="Comfort" type="radio" id="tmRadio2" data-constraints='@RadioGroupChecked(name="Comfort", groups=[RadioGroup])' />
 							<span>Lux</span>
 						</div>
@@ -222,6 +228,41 @@
 						</div>
 					</div>
 				</div>
+				<div class="grid_12">
+					<h3 class="head1">Special Offers</h3>
+				</div>
+				<div class="grid_8">
+					<img src="{% static 'images/page3_img2.jpg' %}" alt="" class="img_inner fleft">
+					<div class="extra_wrapper">
+						<div class="text1 col1"><a href="#">Moscow</a></div>
+						<p>Cras facilisis, nulla vel viverra auctor, leo gna sodales felis, quis malesuada nibh odio ut velit. Proin pharetra luctus diam, a celerisque eros convallis accumsan. </p>Maecenas vehicula egestas venenatis. Duis massa elit, auctor non pellentesque vel
+						<br>
+						<a href="#" class="link1">LEARN MORE</a>
+					</div>
+				</div>
+				<div class="grid_3 prefix_1">
+					<a href="#" class="link1">CLICK HERE FOR MORE OFFERS</a>
+				</div>
+				<div class="grid_12">
+					<h3 class="head1">Blog</h3>
+				</div>
+				<div class="grid_8">
+				<div class="blog">
+					<time datetime="2014-10-01">15<span>Feb</span></time>
+					<div class="extra_wrapper">
+						<div class="text1 col1"><a href="#">uamnibh Edet Mertolo numi</a></div>Posted by
+						<a href="#">Admin</a>
+					</div>
+					<div class="clear"></div>
+					<img src="{% static 'images/page4_img1.jpg' %}" alt="" class="img_inner">
+					<p>Cras facilisis, nulla vel viverra auctor, leo gna sodales felis, quis malesuada nibh odio ut velit. Proin pharetra luctus diam, a celerisque eros convallis accumsan. </p>Maecenas vehicula egestas venenatis. Duis massa elit, auctor non pellentesque vel aliquet sit amet erat. Nullam eget dignissim nisi, aliquam feugiat nibh.
+					<br>
+					<a href="#" class="link1">LEARN MORE</a>
+				</div>
+				</div>
+				<div class="grid_3 prefix_1">
+					<a href="#" class="link1">CLICK HERE FOR MORE BLOGS</a>
+				</div>
 			</div>
 		</div>
 <!--==============================footer=================================-->
@@ -234,11 +275,13 @@
 						<a href="#" class="fa fa-google-plus"></a>
 					</div>
 					<div class="copy">
-						Your Trip (c) 2014 | <a href="#">Privacy Policy</a> | Website Template Designed by TemplateMonster.com
+						Pegasus Tours and Travels (c) 2021 | <a href="#">Privacy Policy</a> | Designed by Adrish Bose
 					</div>
 				</div>
 			</div>
 		</footer>
+
+
 		<script>
 			$(function (){
 				$('#bookingForm').bookingForm({
