--- a/templates/index.html
+++ b/templates/index.html
@@ -13,8 +13,8 @@
 							<ul class="sf-menu">
 								<li class="current"><a href="index.html">ABOUT</a></li>
 								<li><a href="index-1.html">HOT TOURS</a></li>
-								<li><a href="index-2.html">SPECIAL OFFERS</a></li>
-								<li><a href="index-3.html">BLOG</a></li>
+								<li><a href="{% url 'account_login' %}">LOGIN</a></li>
+								<li><a href="{% url 'account_signup' %}">SIGNUP</a></li>
 								<li><a href="index-4.html">CONTACTS</a></li>
 							</ul>
 						</nav>
@@ -247,18 +247,18 @@
 					<h3 class="head1">Blog</h3>
 				</div>
 				<div class="grid_8">
-				<div class="blog">
-					<time datetime="2014-10-01">15<span>Feb</span></time>
-					<div class="extra_wrapper">
-						<div class="text1 col1"><a href="#">uamnibh Edet Mertolo numi</a></div>Posted by
-						<a href="#">Admin</a>
+					<div class="blog">
+						<time datetime="2014-10-01">15<span>Feb</span></time>
+						<div class="extra_wrapper">
+							<div class="text1 col1"><a href="#">uamnibh Edet Mertolo numi</a></div>Posted by
+							<a href="#">Admin</a>
+						</div>
+						<div class="clear"></div>
+						<img src="{% static 'images/page4_img1.jpg' %}" alt="" class="img_inner">
+						<p>Cras facilisis, nulla vel viverra auctor, leo gna sodales felis, quis malesuada nibh odio ut velit. Proin pharetra luctus diam, a celerisque eros convallis accumsan. </p>Maecenas vehicula egestas venenatis. Duis massa elit, auctor non pellentesque vel aliquet sit amet erat. Nullam eget dignissim nisi, aliquam feugiat nibh.
+						<br>
+						<a href="#" class="link1">LEARN MORE</a>
 					</div>
-					<div class="clear"></div>
-					<img src="{% static 'images/page4_img1.jpg' %}" alt="" class="img_inner">
-					<p>Cras facilisis, nulla vel viverra auctor, leo gna sodales felis, quis malesuada nibh odio ut velit. Proin pharetra luctus diam, a celerisque eros convallis accumsan. </p>Maecenas vehicula egestas venenatis. Duis massa elit, auctor non pellentesque vel aliquet sit amet erat. Nullam eget dignissim nisi, aliquam feugiat nibh.
-					<br>
-					<a href="#" class="link1">LEARN MORE</a>
-				</div>
 				</div>
 				<div class="grid_3 prefix_1">
 					<a href="#" class="link1">CLICK HERE FOR MORE BLOGS</a>
