--- a/templates/base.html
+++ b/templates/base.html
@@ -11,8 +11,8 @@
 		<link rel="stylesheet" href="{% static 'booking/css/booking.css' %}">
 		<link rel="stylesheet" href="{% static 'css/camera.css' %}">
 		<link rel="stylesheet" href="{% static 'css/owl.carousel.css' %}">
-		<link rel="stylesheet" href="{% static 'css/style.css' %}">
-
+		{% block head %}
+		{% endblock %}
 		<script src="{% static 'js/jquery.js' %}"></script>
 		<script src="{% static 'js/jquery-migrate-1.2.1.js' %}"></script>
 		<script src="{% static 'js/script.js' %}"></script>
@@ -30,7 +30,7 @@
         <script src="{% static 'booking/js/jquery-ui-1.10.3.custom.min.js' %}"></script>
         <script src="{% static 'booking/js/jquery.fancyform.js' %}"></script>
         <script src="{% static 'booking/js/jquery.placeholder.js' %}"></script>
-        <script src="{% static 'booking/js/regula.js' %}"></script>
+		<script src="{% static 'booking/js/regula.js' %}"></script>
 		<script>
 			$(document).ready(function(){
 			jQuery('#camera_wrap').camera({
@@ -78,5 +78,6 @@
 
         {% endblock %}
 
-    </body>
+	</body>
+	
 </html>
