--- a/templates/account/login.html
+++ b/templates/account/login.html
@@ -5,6 +5,13 @@
 {% load crispy_forms_tags %}
 {% load static %}
 
+{% block head %}
+<link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
+<link rel="stylesheet" href="{% static 'css/style.min.css' %}">
+<link rel="stylesheet" href="{% static 'css/mdb.min.css' %}">
+<link rel="stylesheet" href="{% static 'css/style_login.css' %}">
+{% endblock %}
+
 {% block content %}
 
 <!-- Navbar -->
@@ -14,7 +21,7 @@
       <div class="menu_block">
         <nav class="horizontal-nav full-width horizontalNav-notprocessed">
           <ul class="sf-menu">
-            <li class="current"><a href="index.html">ABOUT</a></li>
+            <li class="current"><a href="{% url 'mainapp:home' %}">ABOUT US</a></li>
             <li><a href="index-1.html">HOT TOURS</a></li>
             <li><a href="{% url 'account_login' %}">LOGIN</a></li>
             <li><a href="{% url 'account_signup' %}">SIGNUP</a></li>
@@ -24,13 +31,13 @@
         <div class="clear"></div>
       </div>
     </div>
-    <div class="grid_12">
+    <!-- <div class="grid_12">
       <h1>
         <a href="index.html">
           <img src="{% static 'images/logo.png' %}" alt="Your Happy Family">
         </a>
       </h1>
-    </div>
+    </div> -->
     <!-- <div style="display: flex;">
       <div style="flex-grow: 1;"></div>
       <div>
@@ -39,15 +46,47 @@
     </div> -->
   </div>
 </header>
-
 <!-- Navbar -->
 
-
+<div class="slider_wrapper">
+  <div id="camera_wrap" class="">
+    <div data-src="{% static 'images/slide.jpg' %}">
+      <div class="caption fadeIn">
+        <h2>LONDON</h2>
+        <div class="price">
+          FROM
+          <span>$1000</span>
+        </div>
+        <a href="#">LEARN MORE</a>
+      </div>
+    </div>
+    <div data-src="{% static 'images/slide1.jpg' %}">
+      <div class="caption fadeIn">
+        <h2>Maldives</h2>
+        <div class="price">
+          FROM
+          <span>$2000</span>
+        </div>
+        <a href="#">LEARN MORE</a>
+      </div>
+    </div>
+    <div data-src="{% static 'images/slide2.jpg' %}">
+      <div class="caption fadeIn">
+        <h2>Venice</h2>
+        <div class="price">
+          FROM
+          <span>$1600</span>
+        </div>
+        <a href="#">LEARN MORE</a>
+      </div>
+    </div>
+  </div>
+</div>
 
 
 <main>
+  <div class="container_12">
   <div class="content">
-
     <!--Section: Products v.3-->
     <section class="mt-5 pt-4">
 
@@ -55,7 +94,7 @@
       <div class="row wow fadeIn">
 
         <div class = "col-6 offset-3">
-        <h3>{% trans "Sign In" %}</h3>
+        <h3 style="text-align: center;">{% trans "Sign In" %}</h3>
 
         {% get_providers as socialaccount_providers %}
 
@@ -83,24 +122,22 @@
 
         <form class="login" method="POST" action="{% url 'account_login' %}">
           {% csrf_token %}
-          {{ form.as_p }}
+          {{ form|crispy }}
           {% if redirect_field_value %}
           <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}" />
           {% endif %}
           <a class="btn btn-default" href="{% url 'account_reset_password' %}">{% trans "Forgot Password?" %}</a>
-          <!-- <a class="btn btn-primary" type="submit">{% trans "Sign In" %}</a> -->
-          <button class="primaryAction" type="submit">{% trans "Sign In" %}</button>
+          <button class="btn btn-primary" type="submit">{% trans "Sign In" %}</button>
         </form>
       </div>
       </div>
     </section>
+    </div>
   </div>
 </main>
 
-
-
 <!--Footer-->
-<footer>
+<div class="footer_login">
   <div class="container_12">
     <div class="grid_12">
       <div class="socials">
@@ -113,19 +150,7 @@
       </div>
     </div>
   </div>
-</footer>
-
-
-<script>
-  $(function (){
-    $('#bookingForm').bookingForm({
-      ownerEmail: '#'
-    });
-  })
-  $(function() {
-    $('#bookingForm input, #bookingForm textarea').placeholder();
-  });
-</script>
+</div>
 
 <!--/.Footer-->
 
