--- a/templates/account/signup.html
+++ b/templates/account/signup.html
@@ -2,114 +2,91 @@
 
 {% load i18n %}
 {% load crispy_forms_tags %}
-
+{% load static %}
 {% block head_title %}{% trans "Signup" %}{% endblock %}
+
+{% block head %}
+<link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
+<link rel="stylesheet" href="{% static 'css/style.min.css' %}">
+<link rel="stylesheet" href="{% static 'css/mdb.min.css' %}">
+<link rel="stylesheet" href="{% static 'css/style_login.css' %}">
+{% endblock %}
 
 {% block content %}
 
 
 <!-- Navbar -->
-
-{% load cart_template_tags %}
-<nav class="navbar fixed-top navbar-expand-lg navbar-light white scrolling-navbar">
-  <div class="container">
-
-    <!-- Brand -->
-    <!-- <a class="navbar-brand waves-effect" href="https://mdbootstrap.com/docs/jquery/" target="_blank"> -->
-    <a class="navbar-brand waves-effect" href="http://127.0.0.1:8000">
-      <strong class="blue-text">Django-ECommerce</strong>
-    </a>
-
-    <!-- Collapse -->
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
-      aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-
-    <!-- Links -->
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-
-      <!-- Left -->
-      <ul class="navbar-nav mr-auto">
-        <!-- <li class="nav-item active">
-          <a class="nav-link waves-effect" href="http://127.0.0.1:8000">Home
-            <span class="sr-only">(current)</span>
-          </a>
-        </li> -->
-        <!-- <li class="nav-item">
-          <a class="nav-link waves-effect" href="http://127.0.0.1:8000/products">Product</a>
-        </li> -->
-        <!-- <li class="nav-item">
-          <a class="nav-link waves-effect" href="http://127.0.0.1:8000/checkout"
-          >Checkout</a>
-        </li> -->
-        <!-- <li class="nav-item">
-          <a class="nav-link waves-effect" href="https://mdbootstrap.com/education/bootstrap/" target="_blank">Free
-            tutorials</a>
-        </li> -->
-      </ul>
-
-      <!-- Right -->
-      <ul class="navbar-nav nav-flex-icons">
-        {% if request.user.is_authenticated %}
-        <li class="nav-item">
-          <a href="{% url 'core:order-summary' %}" class="nav-link waves-effect">
-            <span class="badge red z-depth-1 mr-1"> {{ request.user|cart_item_count }} </span>
-            <i class="fas fa-shopping-cart"></i>
-            <span class="clearfix d-none d-sm-inline-block"> Cart </span>
-          </a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link waves-effect" href = "{% url 'account_logout' %}">
-            <span class="badge red z-depth-1 mr-1"> Logout </span>
-            <!-- <i class="fas fa-shopping-cart"></i>
-            <span class="clearfix d-none d-sm-inline-block"> Cart </span> -->
-          </a>
-        </li>
-        {% else %}
-        <li class="nav-item">
-          <a class="nav-link waves-effect" href = "{% url 'account_login' %}">
-            <span class="badge red z-depth-1 mr-1"> Login </span>
-            <!-- <i class="fas fa-shopping-cart"></i>
-            <span class="clearfix d-none d-sm-inline-block"> Cart </span> -->
-          </a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link waves-effect" href = "{% url 'account_signup' %}">
-            <span class="badge red z-depth-1 mr-1"> Signup </span>
-            <!-- <i class="fas fa-shopping-cart"></i>
-            <span class="clearfix d-none d-sm-inline-block"> Cart </span> -->
-          </a>
-        </li>
-        {% endif %}
-        <!-- <li class="nav-item">
-          <a href="https://www.facebook.com/mdbootstrap" class="nav-link waves-effect" target="_blank">
-            <i class="fab fa-facebook-f"></i>
-          </a>
-        </li> -->
-        <!-- <li class="nav-item">
-          <a href="https://twitter.com/MDBootstrap" class="nav-link waves-effect" target="_blank">
-            <i class="fab fa-twitter"></i>
-          </a>
-        </li> -->
-        <!-- <li class="nav-item">
-          <a href="https://github.com/mdbootstrap/bootstrap-material-design" class="nav-link border border-light rounded waves-effect"
-            target="_blank">
-            <i class="fab fa-github mr-2"></i>MDB GitHub
-          </a>
-        </li> -->
-      </ul>
-
+<header>
+  <div class="container_12">
+    <div class="grid_12">
+      <div class="menu_block">
+        <nav class="horizontal-nav full-width horizontalNav-notprocessed">
+          <ul class="sf-menu">
+            <li class="current"><a href="{% url 'mainapp:home' %}">ABOUT US</a></li>
+            <li><a href="index-1.html">HOT TOURS</a></li>
+            <li><a href="{% url 'account_login' %}">LOGIN</a></li>
+            <li><a href="{% url 'account_signup' %}">SIGNUP</a></li>
+            <li><a href="index-4.html">CONTACTS</a></li>
+          </ul>
+        </nav>
+        <div class="clear"></div>
+      </div>
     </div>
-
+    <!-- <div class="grid_12">
+      <h1>
+        <a href="index.html">
+          <img src="{% static 'images/logo.png' %}" alt="Your Happy Family">
+        </a>
+      </h1>
+    </div> -->
+    <!-- <div style="display: flex;">
+      <div style="flex-grow: 1;"></div>
+      <div>
+        <a href="#" class="btn" data-type="submit">LOGIN</a>
+      </div>
+    </div> -->
   </div>
-</nav>
+</header>
 <!-- Navbar -->
 
+<div class="slider_wrapper">
+  <div id="camera_wrap" class="">
+    <div data-src="{% static 'images/slide.jpg' %}">
+      <div class="caption fadeIn">
+        <h2>LONDON</h2>
+        <div class="price">
+          FROM
+          <span>$1000</span>
+        </div>
+        <a href="#">LEARN MORE</a>
+      </div>
+    </div>
+    <div data-src="{% static 'images/slide1.jpg' %}">
+      <div class="caption fadeIn">
+        <h2>Maldives</h2>
+        <div class="price">
+          FROM
+          <span>$2000</span>
+        </div>
+        <a href="#">LEARN MORE</a>
+      </div>
+    </div>
+    <div data-src="{% static 'images/slide2.jpg' %}">
+      <div class="caption fadeIn">
+        <h2>Venice</h2>
+        <div class="price">
+          FROM
+          <span>$1600</span>
+        </div>
+        <a href="#">LEARN MORE</a>
+      </div>
+    </div>
+  </div>
+</div>
 
 <main>
-  <div class="container">
-
+  <div class="container_12">
+    <div class="content">
     <!--Section: Products v.3-->
     <section class="mt-5 pt-4">
 
@@ -117,7 +94,7 @@
       <div class="row wow fadeIn">
 
         <div class = "col-6 offset-3">
-        <h1>{% trans "Sign Up" %}</h1>
+        <h3 style="text-align: center;">{% trans "Sign Up" %}</h3>
 
         <p>{% blocktrans %}Already have an account? Then please <a href="{{ login_url }}">sign in</a>.{% endblocktrans %}</p>
 
@@ -133,60 +110,26 @@
       </div>
     </section>
   </div>
+  </div>
 </main>
 
 
 
 <!--Footer-->
-<footer class="page-footer text-center font-small mt-4 wow fadeIn">
-
-    
-  <hr class="my-4">
-
-  <!-- Social icons -->
-  <div class="pb-4">
-    <a href="https://www.facebook.com/mdbootstrap" target="_blank">
-      <i class="fab fa-facebook-f mr-3"></i>
-    </a>
-
-    <a href="https://twitter.com/MDBootstrap" target="_blank">
-      <i class="fab fa-twitter mr-3"></i>
-    </a>
-
-    <a href="https://www.youtube.com/watch?v=7MUISDJ5ZZ4" target="_blank">
-      <i class="fab fa-youtube mr-3"></i>
-    </a>
-
-    <a href="https://plus.google.com/u/0/b/107863090883699620484" target="_blank">
-      <i class="fab fa-google-plus-g mr-3"></i>
-    </a>
-
-    <a href="https://dribbble.com/mdbootstrap" target="_blank">
-      <i class="fab fa-dribbble mr-3"></i>
-    </a>
-
-    <a href="https://pinterest.com/mdbootstrap" target="_blank">
-      <i class="fab fa-pinterest mr-3"></i>
-    </a>
-
-    <a href="https://github.com/mdbootstrap/bootstrap-material-design" target="_blank">
-      <i class="fab fa-github mr-3"></i>
-    </a>
-
-    <a href="http://codepen.io/mdbootstrap/" target="_blank">
-      <i class="fab fa-codepen mr-3"></i>
-    </a>
+<div class="footer_login">
+  <div class="container_12">
+    <div class="grid_12">
+      <div class="socials">
+        <a href="#" class="fa fa-facebook"></a>
+        <a href="#" class="fa fa-twitter"></a>
+        <a href="#" class="fa fa-google-plus"></a>
+      </div>
+      <div class="copy">
+        Pegasus Tours and Travels (c) 2021 | <a href="#">Privacy Policy</a> | Designed by Adrish Bose
+      </div>
+    </div>
   </div>
-  <!-- Social icons -->
-
-  <!--Copyright-->
-  <div class="footer-copyright py-3">
-    © 2019 Copyright:
-    <a href="https://mdbootstrap.com/education/bootstrap/" target="_blank"> MDBootstrap.com </a>
-  </div>
-  <!--/.Copyright-->
-
-</footer>
+</div>
 <!--/.Footer-->
 
 
