--- a/templates/index.html
+++ b/templates/index.html
@@ -1,7 +1,10 @@
 {% extends 'base.html' %}
 {% load static %}
-	
-	<body class="page1" id="top">
+
+{% block head %}
+<link rel="stylesheet" href="{% static 'css/style.css' %}">
+{% endblock %}
+<body class="page1" id="top">
 	
 	{% block content %}
 <!--==============================header=================================-->
@@ -11,7 +14,7 @@
 					<div class="menu_block">
 						<nav class="horizontal-nav full-width horizontalNav-notprocessed">
 							<ul class="sf-menu">
-								<li class="current"><a href="index.html">ABOUT</a></li>
+								<li class="current"><a href="index.html">ABOUT US</a></li>
 								<li><a href="index-1.html">HOT TOURS</a></li>
 								<li><a href="{% url 'account_login' %}">LOGIN</a></li>
 								<li><a href="{% url 'account_signup' %}">SIGNUP</a></li>
@@ -266,7 +269,7 @@
 			</div>
 		</div>
 <!--==============================footer=================================-->
-		<footer>
+		<div class="footer_custom">
 			<div class="container_12">
 				<div class="grid_12">
 					<div class="socials">
@@ -279,7 +282,7 @@
 					</div>
 				</div>
 			</div>
-		</footer>
+		</div>
 
 
 		<script>
